--- a/style/main.css
+++ b/style/main.css
@@ -35,11 +35,11 @@ body {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    padding: 12px 0px;
+    padding: 24px 0px;
 }
 
 .header {
-    margin-bottom: 12px;
+    margin-bottom: 16px;
 }
 
 .nav-list {
@@ -51,12 +51,19 @@ body {
 }
 
 .nav-link {
+    display: flex;
+    align-items: center;
     padding: 8px;
-    margin: 0px 4px;
+    margin: 0px 8px;
     color: #fff;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 1.2rem;
     transition: color 0.1s;
+}
+
+.nav-link i {
+    font-size: 1.2rem;
+    padding-right: 4px;
 }
 
 .nav-link:hover {
@@ -129,7 +136,7 @@ body {
 .section-article img {
     max-width: 100%;
     margin-bottom: 12px;
-    padding:24px 0;
+    padding: 24px 0;
 }
 
 .shell-command {
@@ -141,10 +148,24 @@ body {
     line-height: 100%!important;
 }
 
+.sprint-pair {
+    display:flex;
+    flex-direction: column;
+}
+
 .sprint-key {
+    display:flex;
+    align-items:center;
     font-family: roboto-bold, sans-serif;
     font-size: 0.9rem!important;
     margin: 0px!important;
+}
+
+.sprint-key i {
+    position:relative;
+    top:-1px;
+    font-size:1.3rem!important;
+    margin-right:4px;
 }
 
 .sprint-backlog {
@@ -163,6 +184,38 @@ body {
     line-height: 150%;
 }
 
+.sprint-backlog .story-id {
+    vertical-align: middle;
+}
+
+.sprint-backlog .story-id span {
+    color: #fff;
+    background-color: #31415a;
+    padding: 2px 4px;
+    border-radius:3px;
+}
+
+.sprint-backlog .story-point {
+    text-align:center;
+    vertical-align: middle;
+}
+
+.sprint-backlog .story-point span {
+    font-family:roboto-regular, sans-serif;
+    color:#fff;
+    background-color:#571071;
+    padding:4px 9px;
+    border-radius:20px;
+}
+
+.story-points-sum span {
+    font-family:roboto-regular, sans-serif;
+    color:#fff;
+    background-color:#571071;
+    padding:4px 9px;
+    border-radius:20px;
+}
+
 .sprint-backlog tr th:nth-child(1), .sprint-backlog tr td:nth-child(1) {
     width: 20%;
 }
@@ -178,8 +231,8 @@ body {
 .profile {
     display: flex;
     align-items: center;
-    padding:8px 0;
-    margin-bottom:12px;
+    padding: 12px;
+    margin-bottom: 32px;
 }
 
 .profile-picture img {
@@ -188,14 +241,28 @@ body {
     padding: 0px;
 }
 
+.profile-info .name {
+    font-family:roboto-bold, sans-serif;
+    color:#31415a;
+}
+
 .profile-info p {
-    font-family:roboto-regular, sans-serif;
-    font-size:1.4rem;
-    line-height:100%!important;
+    display:flex;
+    align-items:center;
+    font-family: roboto-regular, sans-serif;
+    font-size: 1.4rem;
+    line-height: 100%!important;
+    margin-bottom:12px;
+}
+
+.profile-info i {
+    font-size:1.6rem;
+    margin-right:16px;
+    color:#464646;
 }
 
 .profile-social {
-    display:flex;
+    display: flex;
 }
 
 .profile-social img {
@@ -204,15 +271,13 @@ body {
 }
 
 .footer {
-    font-family:roboto-light-italic, sans-serif;
-    max-width:800px;
-    margin:auto;
-    padding:32px 0;
-    text-align:center;
-    border-top:1px solid #cecece;
-    font-size:1.1rem;
-    color:#464646;
-    line-height:200%;
+    font-family: roboto-light-italic, sans-serif;
+    margin: auto;
+    padding: 32px 0px;
+    text-align: center;
+    font-size: 1.1rem;
+    color: #464646;
+    line-height: 200%;
 }
 
 @media only screen and (max-width: 800px) {
@@ -220,6 +285,6 @@ body {
         padding: 0px 8px;
     }
     .section-article {
-        margin:0;
+        margin: 0;
     }
 }
