--- a/style/expo.css
+++ b/style/expo.css
@@ -88,7 +88,7 @@ body {
 }
 
 .tutorial-list-item-index {
-  font-size:1.4rem;
+  font-size:1.2rem;
   font-family: roboto-bold, sans-serif;
   position:absolute;
   left:-16px;
@@ -100,6 +100,6 @@ body {
   text-align:center;
   border-radius:50%;
   color:#fff;
-  background-color:#327fc7;
+  background-color:#0b5ca9;
   box-shadow: 1px 1px 3px #2e2e2e;
 }
