--- a/style/expo.css
+++ b/style/expo.css
@@ -3,11 +3,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: roboto-light, sans-serif;
 }
+
 .wrapper {
   height: auto;
   width: 100%;
   background-color: #f1f1f1;
 }
+
 .hero {
   background-image: url("/graphics/network.jpg");
   height: 500px;
@@ -16,12 +18,14 @@ body {
   background-size: cover;
   position: relative;
 }
+
 .hero-shadow {
   position: absolute;
   height: 500px;
   width: 100%;
   background: rgba(0, 0, 0, 0.8);
 }
+
 .hero-text {
   text-align: center;
   position: absolute;
@@ -29,11 +33,11 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.hero-title {
-  color: #fff;
-  font-size: 3rem;
-  margin-bottom: 16px;
+
+.hero-logo {
+  margin-bottom: 8px;
 }
+
 .hero-description {
   color: #fff;
   font-size: 1.6rem;
@@ -87,4 +91,13 @@ body {
   color: #fff;
   background-color: #1b63a7;
   box-shadow: 1px 1px 3px #2e2e2e;
+}
+
+
+.footer {
+  font-family: roboto-regular, sans-serif;
+  padding:32px 0 64px 0;
+  text-align:center;
+  line-height:200%;
+  font-size:1.2rem;
 }
