--- a/style/expo.css
+++ b/style/expo.css
@@ -19,6 +19,24 @@ body {
   position: relative;
 }
 
+.link-back {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  color: #fff;
+  background: #2b2b2b;
+  padding: 8px 12px;
+  text-decoration: none;
+  font-size: 0.95rem;
+  font-family: roboto-regular, sans-serif;
+  border-radius: 4px;
+  transition: color 0.1s;
+}
+
+.link-back:hover {
+  color: #cecece;
+}
+
 .hero-shadow {
   position: absolute;
   height: 500px;
@@ -73,10 +91,11 @@ body {
 }
 
 .executive-summary-paragraph {
-  font-size: 1.2rem;
-  color: #2e2e2e;
-  line-height: 150%;
-  text-align:center;
+  font-family: roboto-regular, sans-serif;
+  font-size: 1.1rem;
+  color: #000;
+  line-height: 175%;
+  padding: 0px 16px;
 }
 
 .tutorial-container {
