--- a/style/expo.css
+++ b/style/expo.css
@@ -4,6 +4,13 @@ body {
   font-family: roboto-light, sans-serif;
 }
 
+code {
+  font-family: Consolas, "courier new";
+  color: crimson;
+  background-color: #f1f1f1;
+  padding: 2px;
+}
+
 .wrapper {
   height: auto;
   width: 100%;
@@ -145,6 +152,18 @@ body {
   color: #fff;
   background-color: #1b63a7;
   box-shadow: 1px 1px 3px #2e2e2e;
+}
+
+.tutorial-list-item-description {
+  font-size: 1.2rem;
+  line-height: 175%;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.tutorial-list-item-description a {
+  color: #1b63a7;
+  text-decoration: none;
 }
 
 .footer {
