--- a/style/expo.css
+++ b/style/expo.css
@@ -57,6 +57,19 @@ code {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  animation: fadeInDown 0.8s;
+}
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translate3d(-50%, -150%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(-50%, -50%, 0);
+  }
 }
 
 .hero-logo {
